--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "wifi-radar-1.9.9.tar.bz2": efefba51e5d7b1cc82874eafd3952975f5129b20
+  wifi-radar-2.0.s09.tar.bz2: 389522cd6c087e759984ef7a8bbe9fc1bd93d9bf
